--- a/notebooks/preprocess-combine.ipynb
+++ b/notebooks/preprocess-combine.ipynb
@@ -9,22 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/python-2.7.6/lib/python2.7/site-packages/matplotlib-1.5.1-py2.7-linux-x86_64.egg/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
-      "/usr/local/python-2.7.6/lib/python2.7/site-packages/matplotlib-1.5.1-py2.7-linux-x86_64.egg/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
-      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -35,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -44,6 +33,7 @@
     "from numpy import convolve, ones, where, mod\n",
     "from pandas import read_csv\n",
     "from os.path import exists\n",
+    "from os import makedirs\n",
     "from json import load, dump\n",
     "from os import mkdir"
    ]
@@ -57,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "directory = '/tier2/freeman/Nick/mesoscope'\n",
-    "key = '000012'\n",
+    "directory = '/Volumes/freeman/Nick/mVR/sessions'\n",
+    "key = '000131'\n",
     "path = directory + '/' + key"
    ]
   },
@@ -77,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9314\n"
+      "44\n"
      ]
     }
    ],
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -254,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'numberAcquisitions': 1, 'totalFrames': 9314, 'numberVolumes': 9314, 'framesPerVolume': 1}\n"
+      "{'numberAcquisitions': 1, 'totalFrames': 44, 'numberVolumes': 44, 'framesPerVolume': 1}\n"
      ]
     }
    ],
@@ -273,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -312,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -323,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -335,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -353,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAaEAAAEoCAYAAADxF07SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAECxJREFUeJzt3X2MZfVZwPHvlGGhvIdt2ZWWupWahwrIQilIbVopVRoF\n1IbUGkMLFCZugwEWytKGdis1UgVREUMhUqpp1YJNCjSpUVqkptb4Uogg8BQdWlkWmLIbXtQKDFz/\nOGdgXGd3787MmWfuvd9PMtmz584953e4w3z3d+bMuWO9Xg9Jkiq8qnoAkqTRZYQkSWWMkCSpjBGS\nJJUxQpKkMkZIklRmvKsNR8R+wKXAsZn5M7PWfxD4CWAF8PnMvLOrMUiSlrcuZ0LjwBVzrD8jM9cB\n64ALO9y/JGmZ6yxCmbk1M5+d46GX2sefp5kNSZJGVGen42YZm2tlROwJPLcrG4qIceD1wKbMnF6E\nsUmSCo11ddueiDgeOL39uAU4MDPPiYhfBt5JMwu6MTO/uZ3nTwAT26xeARw5edok0/vYIEmjrbdx\nWdx2bc6JRt9PHqR7x0XEGuBhIyRJwxEhL9GWJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJEll\njJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYI\nSZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAk\nqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiSVGa8i41G\nxFrgYmAK2JSZV7fr1wP7AwcDf5qZd3axf0nSYOhqJnQRsD4z1wMnRsRM7N6RmRuBPwBO6WjfkqQB\n0clMCFiVmVPt8lbgQJpZ0R0RcRPNTOiyjvYtSRoQXc2ENkfE6nZ5JbClXT45M88CTscISdLI62om\ndBVwZURsAb4KXAdMAP8SEZcDBwBf3NEGImKifc5sKzoYqySpyFiv16seQ98iYg3w8ORpk0zvM109\nHEkq1du4LL5/jy3kyV6iLUkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOE\nJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiS\nVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJEll\njJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKnMeFcbjoi1wMXAFLApM69u\n1/8c8G5gd+DGzLy7qzFIkpa3LmdCFwHrM3M9cGJEzARvgiZMzwFPdLh/SdIy12WEVmXmVLu8FTiw\nXT4c+DRwNXBZh/uXJC1zXUZoc0SsbpdXAlva5e9nZg94Btijw/1Lkpa5zn4mBFwFXBkRW4CvAtfR\nnIq7NiJuaj/n97f35IiYaD9/thVdDFSSVGOs1+tVj6FvEbEGeHjytEmm95muHo4kleptXBbfv8cW\n8mQv0ZYklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJXZ6W17ImID8GXgBOBc\n4K7M/FjXA5MkDb9+ZkJvzswEPgC8HXhdt0OSJI2KfiK0d0S8G7i/vfv1fh2PSZI0IvqJ0A3AqcCn\nIuIE4LZuhyRJGhX9vJXDyZl5frv8BPCtDscjSRoh/UTojRFxJfDIzIrMvKa7IUmSRkU/EfL0mySp\nE/38TOg2YBVwCHA78PedjkiSNDL6idCNwL8DhwMvAVd2OiJJ0sjoJ0JPZ+aXgB9k5lPAkx2PSZI0\nIvqJ0B4RcQmwJiJ+Ddiz4zFJkkZEPxE6E3gM+Bqwtf27JEkL1s/VcZ9u/xwDVgLHRMRW4KbM3NzZ\nyCRJQ6+v2/YA36W5Mm4S2Af4Ds0FC5IkzVs/EXpVZl6TmV/PzGuBFzPzFmCq47FJkoZcP6fjVkfE\nVTR3TDgYODQi3ga8utORSZKGXj8R+kXgncBq4EHg4zQ/H3p/h+OSJI2AfiJ0c/vnGNADJmiukrsG\nuLejcUmSRkA/EZoEvgHcB/wYzazoZpo7J7ynu6FJkoZdPxF6bWbO3MR0MiJ+PjP/MSK2dDkwSdLw\n6ydCvYj4C165MGEsIk4Cnup0ZJKkobfTCGXmmRFxKM2FCU9mZrYPfa3TkUmSht52f08oIj7X/nk3\ncAtwLfDnEfHtpRmaJGnYbXcmlJlntovvy8yHlmY4kqRR0s8dEzZ2PgpJ0kja4c+EImI1cGREPA5s\npv1docw8ZikGJ0kabju7MOGGzDxqSUYiSRo5O4vQeETsSzMDellmPtPdkCRJo2JnEToOuJX/G6Ee\n8K7ORiRJGhk7i9C3MvPUJRmJJGnk7OzquO8tySgkSSNphxHKzPOWaiCSpNHTz+8JSZLUCSMkSSpj\nhCRJZfp5K4ddFhFrgYuBKWBTZl4967E3Ad8Ejs7MzV3sX5I0GLqaCV0ErM/M9cCJETEOEBF7AhuA\nOzraryRpgHQVoVWZOdUubwUObJd/HfgU8HxH+5UkDZBOTscBmyNidWY+DqwEtkTEITRvjHcWsBY4\nB7h8exuIiAlgYpvVKzoarySpwFiv11v0jUbEETSn3bYADwFHZebErMc/C1y2qz8Tiog1wMOTp00y\nvc/0Io5YkgZPb+Pif/+eh7Gdf8r2dTITysz7gDN28PjZXexXkjRYvERbklTGCEmSyhghSVIZIyRJ\nKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQy\nRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOE\nJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiS\nVMYISZLKGCFJUpnxLjYaEWuBi4EpYFNmXt2uPx84DNgP+OPM/Ksu9i9Jo6DX6zE2NlY9jAXpaiZ0\nEbA+M9cDJ0bETOzuycx1wCeBn+1o35KkAdFVhFZl5lS7vBU4ECAz74qI1wCXAFd1tG9J0oDo5HQc\nsDkiVmfm48BKYAu8fJpuHXBRZj6zow1ExAQwsc3qFV0MVpJUY6zX6y36RiPiCGADTXweAo7KzImI\nuBf4a+BF4IHM/OwubncN8PDkaZNM7zO9yKOWpMHy0ideWg4/E1rQADqZCWXmfcAZc6w/sov9SZIG\nk5doS5LKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIkgZUj8W/2cBSM0KSpDJGSJJUxghJ\nksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkDqtfzBqaSJM2b\nEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEnSgOrh\nDUwlSZo3IyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSmfGuNhwRa4GLgSlgU2Ze\n3a7fAKwGVgKfzsz7uxqDJGl563ImdBGwPjPXAydGxHhE7Am8LTMvBD4GrO9w/5KkZa6zmRCwKjOn\n2uWtwIHACuD77bpHgYN3cZu7AYz/d5fDlqTBMPm9Sfbafa/SMZx00klraM52Tc/n+V1+N98cEasz\n83GaU29b2v29tn18DfDI9p4cERPAxDar9wZ4wx1vWPTBStKgOfW2U6uHAPAw8Ebgu/N58liv181d\nWCPiCGADTXweAo7KzImIuBD4YZqZ0W9k5nd2YZt7APcApwAvLv6ol53bgNOqB7GERul4R+lYweMd\nZrcBx8x3JtRZhLoSEf+UmcdWj2MpjNKxwmgd7ygdK3i8w2yhx+ol2pKkMkZIklTGCEmSygxihG6o\nHsASGqVjhdE63lE6VvB4h9mCjnXgLkyQJA2PQZwJSZKGhBGSJJUxQpKkMkZIklRmYO4Eur23hhgG\nEfFB4P3AgzQ3ez0AeInmLS8+Avx4+/j/AH+bmX9WNNQFiYj9gEuBt2TmyRHxO+zgOIGvANcBm4D9\nM3NdycDnYY5jvQe4s334C8A0s76egd+jucpoC7AKWJeZP1jygc9TRLwZ2Ag8DvRoXtdhfW23Pdaf\nAv6mfXgYX9ujad4VYQvwPM3kZdFe20GaCf2/t4aoHtAi+0+a++E9DuyVmR8BPgOcA1wAnJOZHwbO\nLBvhwo0DVwBjEXEoOz/O9wG3Z+alwKaI+MmaYc/Ly8fa/v0F4BmaO8lvZpuvZ+Ak4KHM3ADcAbx3\nyUe8MD3gvMy8ADiC4X5tZx/rYTTRGebX9jngw5l5PnA0i/zaDtI38rneGmJqB58/SG4Fbs3MpyLi\nDuCudv1m4HXAbpn5UrtuYK+pz8ytABExRvOvqEfbh+Y6TtrP2fa/xUCYdawzq34pMycj4k3Ax4GD\ntvl6PohX/ns8Crx1CYe7YJn5IEBEXAB8g1e+TofxtZ19rF8A/m7IX9v7I2JtRHyCZjY/8w+rRXlt\nB2kmtDkiVrfLM28NMSwC2L1dfpHmbS6gudv4I8ALs2Z+YwyHzcAh7fL2jvPROT5n0IxFxO7Aj7Z/\nfxbYA3gsIn6oXfcamn9QDeyxRsSKiLgO+Afg8wzxa7vNsX6R4X9tjwUyM98LHMciv7YD88uq2741\nRGb+YfGQFk1EvBX4KPBvNFPfcZooHUQztT8C+ADNOdc7MvNLRUNdkIg4Hji9/biF5l/Lu7Gd4wT+\nkubc8mPA3pl5XsGw52WOY11J803qAOC3af5nvZRZX88RcT3wNM03rnWZ+VzF2OcjIi4F3g7c364a\naz+G8bWdfaxjNGdlhvm1fRdwNvAksC9NVLf7/YldfG0HJkKSpOEzSKfjJElDxghJksoYIUlSGSMk\nSSpjhCRJZYyQJKmMEZIWUUR8bhG2cXhEfGaO9cdFxFUL3b60nPh7QtI8RMS1NL8NfgLNb85PA+dm\n5hOLsO3bgQ/NuvXL7MduBK7KzAcWuh9pORike8dJy8bMb4FHxNdp7gv3bPv3uzPz6Ii4D7gZeAfN\n/bZeDRwPvAd4C81dmJ9qNpWXz2w3Il4PvJiZUxHx08AE8F/AA5n5WzT3KjsLuGRpjlTqlqfjpIWZ\nuT3NjJlTC/u2cbme5oaWlwFP0Nwn8DeBszPzV4BjI+KgWc8/Bri7XT4FuD4zzwS+3K77Nk3EpKFg\nhKRuzNxg9/lZyy/Q3HPrYOCKiLiJ5oaXq2c9b3+ae4xBE6tfaGdbJ7Trngb263Dc0pIyQlI3dnS3\n8/+geb+Zs4BfBe6d9djTNCEC+JH2tN9JwLntuv1p3rtGGgr+TEhamO1d2TPX+l778UngTyJiK/B8\nZk7M+py7gQ+1y4dFxCU00Zl5f5ajgX9e6KCl5cKr46RlJiK+ApyZmU/O8dgfAb+bmf+69COTFp+n\n46Tl56PA5duubN9c7GkDpGHiTEiSVMaZkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVKZ/wVprVI/\nOoyNNAAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZwAAAEmCAYAAABWECYqAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFqpJREFUeJzt3X/QXFV9x/H3Q0IoEhKiKCEEhIrz1emgwD/qjDAidtoS\nBMUKpLRYRILTUpwCpRXtYIo6VoUQqkjTog4qBn8wCgIKWls7gqatpFTQI1BECBhCQkzRBCWmf+yS\nbB6zv9i9Z+/Zfb9mMnn23md3z7n3PvvZe+/5MbVt2zYkSarabqMugCRpMhg4kqQsDBxJUhYGjiQp\nCwNHkpSFgSNJymJmlS8eEYcCn0spHdmy7Fjg9ObDq1JKd1RZBklSPVQWOBGxH3Am8OS0VecBJwC7\nA9cBJ1ZVBklSfVQWOCmltcA7I+LmXazbCmyNiFn9vGZEzAQWAg+nlJ4eTkklSTlUekmtaWra4y3N\n4Ngd2NLuSRGxBFgybfEs4LBv7LsvHH00n3/BOk4+7IfDLe2IvT7BDZ+Fqffsev1Nn4Hj7m2/flvr\n8qVL4cAD277XLZvv4rh1l+947kEf32n9G9f9A1/afGfb9VM/eev2n5+/2948tnB52/XvmnM8793n\npLbrH1zwIQ6a+bztj2/a/N8cv27H601/7xPXXcENm1cPpWx/O+f1/N0+b2y7/qEFH2bhzOdSgtZy\n77fbHH668PK26y+ecwLv2ecNbdevWXApC2bO2/74xl+s5oTHr9j+ePo2X/TY5dy85a6261tfe/8Z\nc3nkgGXPumyPHrCM+TPmbn/8zS0/4LWPfajtey9+/CpW/mJV2/VceCGceSZ84AOob9M/49vKETjb\nACLiChqX05YDVzff+5J2T0oprQBWtC6LiIOBB7juOli4EO7+PHzh5KrKPRJTJ5wA134Zlu56H07d\ndDO8+A/arqefoYruvQWubflAOuOMnddfdwP88M7265fu+ACY2nPPzutffji8tsP6k0+BuS3h+KOb\n4LMtITH9tVd+CdLq9uv7KdvhR8AxHdafcirMOYAitJb7Oc/pXO8jjoTXdFh/6mLYe/8d69KNsHJH\n4PzGa1/7Bbj3rvbrdyrbXoOXbfZ+O9Y98E24Zkfg/MZrf/FW+P6q9usvaftRpCGqPHBSSsc1/z+3\nuehbzX+SpAlis2hJUhYGjiQpCwNHkpSFgSNJysLAkSRlYeBIEvTXpUDPioEjSVM9913UAAwcSVIW\nBo4kKQsDR5KUhYEjScrCwJEkZWHgSJKyMHAKs4169hXYVnAfhrpu06qVXO9Kyl7wMVwKA6dmSv7g\n7qTbB8T09VNd+kVM9T7n08DbtNQP5tz1HuY+6fu9h3i8qDpFB063g0yd+Ueqfoz139s4161Gig4c\nSVI5DBxJUhYGjiQpCwNHkpSFgSNJysLAkSRlYeBIEtjxMwMDR5Lsh5OFgSNJysLAkSRlYeBIkrIw\ncNRWqYNWqhrjOrCs8jFwamasB0jsoMqBQid2mxZcbweOHU8GTmHq+i2z5LOhum7TqpVc75LLPskM\nHNVSt2+4JX97H1ej3CdDOV4MscoZODUzrt/c+p1wq+uEbX1sp4EnIit0n+Sud1/7pM8J+QZ+vUL3\n4bgxcNSW19HVaqzPKse5bjVi4BSmrn/0JV8C6zrzaY3LPohR1nvQLzPjuk/GnYEjScrCwJEkZWHg\nSJKyMHAkSVkYOJKkLAwcSQI7fmZg4EiSzayzMHAkSVkYOJKkLGZW9cIRsQC4FFgP3JNSurK5/Azg\nlcA24NsppU9VVQZJUn1UeYZzNrA8pXQOsCgiZjSXrwF+GzgUeKjC95ck1UhlZzjAfHYEyhPAXGAD\ncC7wJmAG8EngXyssw9ip66i3zodTnpLrXXLZJ1mVgfMgsJDGGc08YGNz+W7Ak8AUjdDZpYhYAiyZ\ntnjW8IupOip5MNBJVfx8OKpclYFzNXBZRGwCrgeWRcT5wGXANcAvgWXtnpxSWgGsaF0WEQcDD1RV\nYEkTzLOmylUWOCmltcBpu1j19eY/SaoHz4CysFl0zZR8L6STrjN+VvjtctBtWur9gjrX2xk6J1PR\ngeOMlIPxurf64d+bBlV04EiSymHgSJKyMHAkSVkYOJKkLAwcSVIWBo4kgR0/MzBw1JZ9IdRqXPuI\nAXb8zMTAkSRlYeDUzKR2rquyk+nEbtOC622n4/Fk4EiSsjBwClPX6+gl3++p6zatWsn1Lrnsk8zA\nkSRlYeColrpdwy/5/sS4GuU+8Xgpg4EjSWA/nAwMHEmyVVwWBk7NjOvN0H4n3Oo6YVsf22ngicgK\n3Se5693XPhnyhHzDPF5UHQNHbdkXQq28D6JBGTiFqesffck3bbvOfFrjsg9ilPUe9MvMuO6TcWfg\nSJKyMHAkSVkYOJKkLAwcSQL74WRg4EiSsjBwJMkuAFkYOJKkLAwcSVIWBo4kKQsDpzB1HRPKCdjK\nU3K9Sy77JDNwVEslD5UzqZwPR90YOJKkLAwcSQI7fmZg4EiS/XCyMHAkSVkYODVTcmuvTrrO+Flh\nq6NBt2mpLaLqXG9n6JxMRQeOM1IOxpY96od/bxpU0YEjSSqHgSNJysLAUVteR1ercb2/qHwMnJqZ\n1OvkVd4vmthtWnC9R3L/0ECtnIEjScrCwJGkgs8GSzKzqheOiAXApcB64J6U0pXN5b8HnNh875tS\nSl+uqgySpPqo8gznbGB5SukcYFFEzGguPwt4nEbg/FeF7y9JqpHKznCA+cBDzZ+fAOYCG4AjgdOA\nBcD7gLdUWIaxU9eWQiW3aKvrNq1ayfUuueyTrMrAeRBYCKwB5gEbm8t/nFJ6KiI2QPtPqYhYAiyZ\ntnhWFQVV/XRrpVRyC6xxNcp94vFShioD52rgsojYBFwPLIuI84GPRMQ1zfd+b7snp5RWACtal0XE\nwcADlZVYklSZygInpbSWxqWz6a5v/pMkTRCbRUsS2PEzAwNHkrzHk4WBI0nKwsCpmXFt7tnvhFtd\nJ2zrYzsNPBFZofskd7372idDnpBvmMeLqmPgqC0nYFMrmxZrUAZOYer6R19yP4iuM5/WuOyDGGW9\nB/0yM677ZNwZOJKkLAwcSVIWXTt+RsRraAwpsztwEXBlSukzFZdLkvKyYUHlejnD+QCwGngH8Lv8\n5vhmkiR11UvgbAVeADwCTAH7VFoiScrNRghZ9DKW2keAi4G/Bi6gw4CbkiS100vgvDGl9Obmz0ur\nLIy6q2sHNufDKU/J9S657JOsl8DZOyLeAdwP/BogpXRzpaWSJI2dXgLnOzTu2xxJ4x7ONsDAUaVK\n7kg6qZyATd30EjjvA04B9ge+Dfyo0hJJksZSL63UPgE8HzgJmA18ttISSZLGUi+Bc0BK6XJgS0rp\nNmCPisskSfnZEKFyvQTO4xHxNmB2RLwZeLziMklSXt7jyaKXwHkLsBfwn8CBwOmVlkiSNJZ6CZwz\ngF8BdwNbgNMi4viImFFpySZUnfqzDLMsXSdgq/ByxqD1KLXPx7DrPczt4IRpk6mXwDkOOIJG6LwM\nWAycAHy6wnJJksZML82i90wpnfXMg4i4LaW0JCL+vcJy9WQcZ6TMWaeufRdylqXGk32Vatj1ztmX\nxX4z46mXwHk6Is4A7qTR+fNXEfFynEtHktSHXkLjzTT637wNmAuc2ny8uMJySZLGTC9nOO9u/r+Z\nxmgDf0NjqoLvV1UoScrOhgqV6+UM50XAJuA2YAONBgRzcMQBSePCe0ZZ9HKG89yU0jNz4NwaEa9L\nKb2/Do0GJEnl6CVw1kXEUnY0Gng8Io4Bnqq0ZNqlOvXTaVVyv4m6btOqlVzvkss+yXq5pLaYxigD\nh9IInT8C1tIYzFOSpJ60PcOJiItTSkuBlTTmwJkCXgEsTimdnKl8mlDd+mFMat+aOhvlPvF4KUOn\nS2pXNf9/L7AxQ1kkSWOsbeCklNY2f/xISumoTOWRJI2pTpfUnpdSWk9jWoI7gftpXFrb5iU1SWOn\n4IYvpeh0Se3zwGuBN2QqiyRpjHUKnBkRsSewLldhJGkk7PiZRafAeRlwE2xv3vFMS7VtNM58JEnq\nWafAWZ1SMlgkSUPRqePnfdlKoe3GtQd1vzM8dp0htI/tNPDMl4Xuk9z17mufDHkG2GEeL6pO28Bp\nnXRNk8lJsNTKzpMalJOoFaauf/Ql9/Su08ynOY2y3oN+mRnXfTLuDBxJUhYGjiSBHT8zMHAkyfuV\nWfQyH86zEhELgEuB9cA9KaUrW9bNBW4HjkkpPVZVGSRJ9VHlGc7ZwPKU0jnAooiYARARU8D7sNn1\ns1LX5p1OwFaekutdctknWWVnOMB84KHmz08Ac4ENwMXAPwLndXpyRCwBlkxbPGvIZVRNldzqbVI5\nH466qTJwHgQWAmuAecDGiNiXxiRuLwBeBVwIXLCrJ6eUVgArWpdFxMHAA9UVWZJUlSoD52rgsojY\nBFwPLAPOTyn9AUBEfBz4YIXvL0mqkcoCpzmB22kd1r+1qveWJNWPzaIlCeyHk4GBo7ZKbnmm4bNl\nmAZl4EiSHT+zMHBqZlKbb1Y5MvXEbtOC6+1I5ePJwJEkZWHg1My4XifvdwK2nO9d9fNHpc71HvYE\nbCqDgSNJyqLowPE672C6Dgfi9lWLku8JqR6KDhxJUjkMHEkCO35mYOBIkpePszBwClPX1jultuSC\n+m7TqpVc75LLPskMHElSFgaOaqlbiyhb0NXPKPeJx0sZDBxJUhYGjiQpCwNHkpSFgSNJYD+cDAwc\nSVIWBo4k2YotCwNHkpSFgSNJysLAkSRlYeDUzLiOEdV1hsdpY7ENc4bQQbdpqfskd7372ifd9m+f\nY/ONckZZ9c7AUVtOuKVWDg+jQRk4hanrH33JY1lN6syno6z3oF9mxnWfjDsDR5LAjp8ZGDiFqeu1\naOfDKU/J9R562T1jysLAkSRlYeColkq+JzSpnA9H3Rg4kqQsDBy1VfJ9GQ1fyfd8VA8GjiQpCwOn\nZib1WnOVnUwndpsWXG87HY8nA0eSwH44GRg4klTw2WBJDBxJUhYGjiQpCwNHkpSFgSNJysLAqZlx\n7VzX7wRsOd+76uePSp3rPewJ2FQGA0eSlEXRgWPnsMF0HfDQ7asWJXck7UmhZ7IlmVnVC0fEAuBS\nYD1wT0rpyubytwOHAXsBX0gpfaWqMoyjul5qKPWyE9R3m1at5HqXXPZJVuUZztnA8pTSOcCiiJjR\nXP5ESunPgfOAxRW+vyT1ZtzP3mqisjMcYD7wUPPnJ4C5wIaU0nURsReNs5/3t3tyRCwBlkxbPKuK\ngqp+ul2+8XJf/Yxyn3i8lKHKwHkQWAisAeYBGwEi4iXAu4B3p5QebPfklNIKYEXrsog4GHigovJK\nkipU5SW1q4FzI+JjwPXAsoiYBdwI/BZwSURcWOH7S5JqpLIznJTSWuC0Xax6cVXvKUmqr6KbRUuS\nymHgSJKyMHAkCez4mYGBI0n2w8nCwJEkZWHgSJKyMHAkSVkYOJKkLIoOnHEcMTZnner0XtNHmx7m\nhG2D1rPU4yx3vfvaJ932b58txkY5wZ96V3TgSJLKUXTgOALsYLpOwGZTUbUY+783++FUrujAUTlK\n/rAqueyDqLLefpmZTAaOJBmAWRg4amuU00Y7oVb9dLvx7gRs6sbAkSRlYeDUzKR+E6vymv7EbtOC\n6+09nvFk4EiSsjBwJElZGDiSpCwMHEkCO35mYOBIko0UsjBwJElZGDiSpCwMHElSFgaOJCkLA0eS\nlIWBUzPjOjNhvzN+5nzvqp8/KnWu97Bn/FQZDJzC1PUPsdQPZajvNq1ayfWupOwFb49SFB04DvA3\nmK5Durt91aLkwUBVD0UHjsaX01+XZ5T7ZODjxeMpCwNHkpSFgSNJysLAkSRlYeBIkrIwcCRJWRg4\nkqQsDBxJAjt+ZmDgSJL9cLIwcCRJWRg4kqQsDBxJUhYGjiQpCwNHkpTFzKpeOCIWAJcC64F7UkpX\nNpcfC5ze/LWrUkp39Pvahyw/hKdnPz20stbJV+/7KlNL27eYOelzJ3V8/vwPz2dqaoqZu83koldf\nxMI5C9v+7qo1q3Z6fGO6cafHdz56Z8f1rTY9tanj+lVrVnVcf9v/3sY96+6ppGwbt2zsXLZHOpft\n1vtv5YC9D2i7vq42bN4wcL33n73/9se3P3T7TuunP3f1T1d3XN9q/eb1Hdd/d813u5Zt/uz52x/f\ntfauju/9vUe/17ls+66HvXaDDu9ZtQPnHsjh8w8f2fvnMFXVJEwRsRS4JaX0nYi4CTghpbT1mZ+B\n3YHrUkon9vGaLwLu+8nrfsLTzxnPwJE0uS466iLOOvKsURejL8cee+whwMMppa4fypWd4QDzgYea\nPz8BzAU2AFMppa3A1oiY1e7JEbEEWDJt8V4AB339oOGXVpJGbOUNK1nJylEXo18PAIcAP+72i1UG\nzoPAQmANMA/Y2Fy+OSJm0jjD2dLuySmlFcCK1mURsQewGjge2FpBmUt3A42zR+2a26c9t01nbp/2\nbgAe7uUXqwycq4HLImITcD2wLCLOB5Y3180ELunnBVNKT0XEz1NK9w+9tGMgIn6ZUvrxqMtRV26f\n9tw2nbl92mtum57ucVQWOCmltcBpu1j1reY/SdIEsVm0JCkLA0eSlEWJgbOi+69MLLdNZ26f9tw2\nnbl92ut521TWD0eSpFYlnuFIkgpk4EiSsjBwJElZGDiSpCyqHGlgqNqNPq2GiDgI+DKNoX8eSSm9\na8RFqoWIOBT4XErpyIi4ADgYmAP8ZUpp/UgLVwPTts/VwAxgG3BlSuk/Rlu60YiIVwFvBzYBjwGb\n8bjZbhfb54U0sqTrcVPSGc7ZwPKU0jnAooiYMeoC1czRwKM0dvrtXX53IkTEfsCZwJPNcfiObh4/\nH+c3B4adOK3bp7nosObP/wfcPapy1cA+wJ+llP4CeDVwlMfNTqZvn56Pm5ICZ1ejT2uHVcAZND5A\nzjOQG8MrpZTeSeOPYR6wtrnqYWD/tk+cENO2D8AFzQ/WrwHvGF3JRiuldEtK6ecRcRHwaRrf4sHj\nBtjl9vmrXo+bkgLnmdGnYefRp9VwBLBHSmkbjVPdkvZtDo8Bz2v+vBB4ZIRlqZupiJgN/E7z8XoK\nutw+bBExOyL+GbgDuBaPm51M2z5foo/jpqSDaqfRp1NKvx51gWrmXuBDEbEW+EpK6VejLlCdpJR+\nHRHfjIiP0rgk8PZRl6lGtqWUnoyIl0TE5cDewIWjLtQILQcOpXHF4HTA42Zn07fPz3o9bhxpQJKU\nhZddJElZGDiSpCwMHElSFgaOJCkLA0eSlEVJzaKlWomIf6LRPPRw4C5gK/AnwNtSSksHfO2zgO+k\nlP5n2vIAfj+ltHyQ15dGwWbR0oAi4l+ARSmlzUN6vd2BT6SU/rjN+muAs4f1flIunuFIg5tq/iMi\nXgh8GLiARmflLcBzgZXAicC6lNKpEfFK4IM0Bsv8aErp2pbXW0SjFzfNAUdPpHH5e0lK6W7gW8Cb\naAwrIhXDezjS8D1z2eD5wOuBG4F9U0rHAvs3h5H5expBchRwVnNw0We8EvhB8+dFwB8CfwrMbi77\nAfCKKisgVcHAkQbX7rr0j1rGtruvuexnwB7AS4EvAt+gMVZX66CQ82iMSwVwPnAFcHnL+seavyMV\nxcCRBjf1LH73+zTu+xxD49LYoy2/s4HG3CsAp6aUTgHOpXGZDhojpT/+7IsrjYaBIw1uV2c427os\nfw/wtYhYBeyZUnqq5XfuoNHyDWBNRNxJYy6WjzWXHY5zHqlAtlKTaqZ5P+eTKaXFbdZ/ikYDAlup\nqSie4Ug10zzb+beIePn0dRHxUuB7ho1K5BmOJCkLz3AkSVkYOJKkLAwcSVIWBo4kKQsDR5KUhYEj\nScri/wEYC7LZYwNr3QAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x6d368d0>"
+       "<matplotlib.figure.Figure at 0x10db6ded0>"
       ]
      },
      "metadata": {},
@@ -405,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
