--- a/notebooks/preprocess-combine.ipynb
+++ b/notebooks/preprocess-combine.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "directory = '/Volumes/freeman/Nick/mVR/sessions'\n",
-    "key = '000131'\n",
+    "directory = '/tier2/freeman/Nick/mVR/sessions'\n",
+    "key = '000134'\n",
     "path = directory + '/' + key"
    ]
   },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44\n"
+      "8585\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'numberAcquisitions': 1, 'totalFrames': 44, 'numberVolumes': 44, 'framesPerVolume': 1}\n"
+      "{'numberAcquisitions': 1, 'totalFrames': 8585, 'numberVolumes': 8585, 'framesPerVolume': 1}\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -343,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZwAAAEmCAYAAABWECYqAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFqpJREFUeJzt3X/QXFV9x/H3Q0IoEhKiKCEEhIrz1emgwD/qjDAidtoS\nBMUKpLRYRILTUpwCpRXtYIo6VoUQqkjTog4qBn8wCgIKWls7gqatpFTQI1BECBhCQkzRBCWmf+yS\nbB6zv9i9Z+/Zfb9mMnn23md3z7n3PvvZe+/5MbVt2zYkSarabqMugCRpMhg4kqQsDBxJUhYGjiQp\nCwNHkpSFgSNJymJmlS8eEYcCn0spHdmy7Fjg9ObDq1JKd1RZBklSPVQWOBGxH3Am8OS0VecBJwC7\nA9cBJ1ZVBklSfVQWOCmltcA7I+LmXazbCmyNiFn9vGZEzAQWAg+nlJ4eTkklSTlUekmtaWra4y3N\n4Ngd2NLuSRGxBFgybfEs4LBv7LsvHH00n3/BOk4+7IfDLe2IvT7BDZ+Fqffsev1Nn4Hj7m2/flvr\n8qVL4cAD277XLZvv4rh1l+947kEf32n9G9f9A1/afGfb9VM/eev2n5+/2948tnB52/XvmnM8793n\npLbrH1zwIQ6a+bztj2/a/N8cv27H601/7xPXXcENm1cPpWx/O+f1/N0+b2y7/qEFH2bhzOdSgtZy\n77fbHH668PK26y+ecwLv2ecNbdevWXApC2bO2/74xl+s5oTHr9j+ePo2X/TY5dy85a6261tfe/8Z\nc3nkgGXPumyPHrCM+TPmbn/8zS0/4LWPfajtey9+/CpW/mJV2/VceCGceSZ84AOob9M/49vKETjb\nACLiChqX05YDVzff+5J2T0oprQBWtC6LiIOBB7juOli4EO7+PHzh5KrKPRJTJ5wA134Zlu56H07d\ndDO8+A/arqefoYruvQWubflAOuOMnddfdwP88M7265fu+ACY2nPPzutffji8tsP6k0+BuS3h+KOb\n4LMtITH9tVd+CdLq9uv7KdvhR8AxHdafcirMOYAitJb7Oc/pXO8jjoTXdFh/6mLYe/8d69KNsHJH\n4PzGa1/7Bbj3rvbrdyrbXoOXbfZ+O9Y98E24Zkfg/MZrf/FW+P6q9usvaftRpCGqPHBSSsc1/z+3\nuehbzX+SpAlis2hJUhYGjiQpCwNHkpSFgSNJysLAkSRlYeBIEvTXpUDPioEjSVM9913UAAwcSVIW\nBo4kKQsDR5KUhYEjScrCwJEkZWHgSJKyMHAKs4169hXYVnAfhrpu06qVXO9Kyl7wMVwKA6dmSv7g\n7qTbB8T09VNd+kVM9T7n08DbtNQP5tz1HuY+6fu9h3i8qDpFB063g0yd+Ueqfoz139s4161Gig4c\nSVI5DBxJUhYGjiQpCwNHkpSFgSNJysLAkSRlYeBIEtjxMwMDR5Lsh5OFgSNJysLAkSRlYeBIkrIw\ncNRWqYNWqhrjOrCs8jFwamasB0jsoMqBQid2mxZcbweOHU8GTmHq+i2z5LOhum7TqpVc75LLPskM\nHNVSt2+4JX97H1ej3CdDOV4MscoZODUzrt/c+p1wq+uEbX1sp4EnIit0n+Sud1/7pM8J+QZ+vUL3\n4bgxcNSW19HVaqzPKse5bjVi4BSmrn/0JV8C6zrzaY3LPohR1nvQLzPjuk/GnYEjScrCwJEkZWHg\nSJKyMHAkSVkYOJKkLAwcSQI7fmZg4EiSzayzMHAkSVkYOJKkLGZW9cIRsQC4FFgP3JNSurK5/Azg\nlcA24NsppU9VVQZJUn1UeYZzNrA8pXQOsCgiZjSXrwF+GzgUeKjC95ck1UhlZzjAfHYEyhPAXGAD\ncC7wJmAG8EngXyssw9ip66i3zodTnpLrXXLZJ1mVgfMgsJDGGc08YGNz+W7Ak8AUjdDZpYhYAiyZ\ntnjW8IupOip5MNBJVfx8OKpclYFzNXBZRGwCrgeWRcT5wGXANcAvgWXtnpxSWgGsaF0WEQcDD1RV\nYEkTzLOmylUWOCmltcBpu1j19eY/SaoHz4CysFl0zZR8L6STrjN+VvjtctBtWur9gjrX2xk6J1PR\ngeOMlIPxurf64d+bBlV04EiSymHgSJKyMHAkSVkYOJKkLAwcSVIWBo4kgR0/MzBw1JZ9IdRqXPuI\nAXb8zMTAkSRlYeDUzKR2rquyk+nEbtOC622n4/Fk4EiSsjBwClPX6+gl3++p6zatWsn1Lrnsk8zA\nkSRlYeColrpdwy/5/sS4GuU+8Xgpg4EjSWA/nAwMHEmyVVwWBk7NjOvN0H4n3Oo6YVsf22ngicgK\n3Se5693XPhnyhHzDPF5UHQNHbdkXQq28D6JBGTiFqesffck3bbvOfFrjsg9ilPUe9MvMuO6TcWfg\nSJKyMHAkSVkYOJKkLAwcSQL74WRg4EiSsjBwJMkuAFkYOJKkLAwcSVIWBo4kKQsDpzB1HRPKCdjK\nU3K9Sy77JDNwVEslD5UzqZwPR90YOJKkLAwcSQI7fmZg4EiS/XCyMHAkSVkYODVTcmuvTrrO+Flh\nq6NBt2mpLaLqXG9n6JxMRQeOM1IOxpY96od/bxpU0YEjSSqHgSNJysLAUVteR1ercb2/qHwMnJqZ\n1OvkVd4vmthtWnC9R3L/0ECtnIEjScrCwJGkgs8GSzKzqheOiAXApcB64J6U0pXN5b8HnNh875tS\nSl+uqgySpPqo8gznbGB5SukcYFFEzGguPwt4nEbg/FeF7y9JqpHKznCA+cBDzZ+fAOYCG4AjgdOA\nBcD7gLdUWIaxU9eWQiW3aKvrNq1ayfUuueyTrMrAeRBYCKwB5gEbm8t/nFJ6KiI2QPtPqYhYAiyZ\ntnhWFQVV/XRrpVRyC6xxNcp94vFShioD52rgsojYBFwPLIuI84GPRMQ1zfd+b7snp5RWACtal0XE\nwcADlZVYklSZygInpbSWxqWz6a5v/pMkTRCbRUsS2PEzAwNHkrzHk4WBI0nKwsCpmXFt7tnvhFtd\nJ2zrYzsNPBFZofskd7372idDnpBvmMeLqmPgqC0nYFMrmxZrUAZOYer6R19yP4iuM5/WuOyDGGW9\nB/0yM677ZNwZOJKkLAwcSVIWXTt+RsRraAwpsztwEXBlSukzFZdLkvKyYUHlejnD+QCwGngH8Lv8\n5vhmkiR11UvgbAVeADwCTAH7VFoiScrNRghZ9DKW2keAi4G/Bi6gw4CbkiS100vgvDGl9Obmz0ur\nLIy6q2sHNufDKU/J9S657JOsl8DZOyLeAdwP/BogpXRzpaWSJI2dXgLnOzTu2xxJ4x7ONsDAUaVK\n7kg6qZyATd30EjjvA04B9ge+Dfyo0hJJksZSL63UPgE8HzgJmA18ttISSZLGUi+Bc0BK6XJgS0rp\nNmCPisskSfnZEKFyvQTO4xHxNmB2RLwZeLziMklSXt7jyaKXwHkLsBfwn8CBwOmVlkiSNJZ6CZwz\ngF8BdwNbgNMi4viImFFpySZUnfqzDLMsXSdgq/ByxqD1KLXPx7DrPczt4IRpk6mXwDkOOIJG6LwM\nWAycAHy6wnJJksZML82i90wpnfXMg4i4LaW0JCL+vcJy9WQcZ6TMWaeufRdylqXGk32Vatj1ztmX\nxX4z46mXwHk6Is4A7qTR+fNXEfFynEtHktSHXkLjzTT637wNmAuc2ny8uMJySZLGTC9nOO9u/r+Z\nxmgDf0NjqoLvV1UoScrOhgqV6+UM50XAJuA2YAONBgRzcMQBSePCe0ZZ9HKG89yU0jNz4NwaEa9L\nKb2/Do0GJEnl6CVw1kXEUnY0Gng8Io4Bnqq0ZNqlOvXTaVVyv4m6btOqlVzvkss+yXq5pLaYxigD\nh9IInT8C1tIYzFOSpJ60PcOJiItTSkuBlTTmwJkCXgEsTimdnKl8mlDd+mFMat+aOhvlPvF4KUOn\nS2pXNf9/L7AxQ1kkSWOsbeCklNY2f/xISumoTOWRJI2pTpfUnpdSWk9jWoI7gftpXFrb5iU1SWOn\n4IYvpeh0Se3zwGuBN2QqiyRpjHUKnBkRsSewLldhJGkk7PiZRafAeRlwE2xv3vFMS7VtNM58JEnq\nWafAWZ1SMlgkSUPRqePnfdlKoe3GtQd1vzM8dp0htI/tNPDMl4Xuk9z17mufDHkG2GEeL6pO28Bp\nnXRNk8lJsNTKzpMalJOoFaauf/Ql9/Su08ynOY2y3oN+mRnXfTLuDBxJUhYGjiSBHT8zMHAkyfuV\nWfQyH86zEhELgEuB9cA9KaUrW9bNBW4HjkkpPVZVGSRJ9VHlGc7ZwPKU0jnAooiYARARU8D7sNn1\ns1LX5p1OwFaekutdctknWWVnOMB84KHmz08Ac4ENwMXAPwLndXpyRCwBlkxbPGvIZVRNldzqbVI5\nH466qTJwHgQWAmuAecDGiNiXxiRuLwBeBVwIXLCrJ6eUVgArWpdFxMHAA9UVWZJUlSoD52rgsojY\nBFwPLAPOTyn9AUBEfBz4YIXvL0mqkcoCpzmB22kd1r+1qveWJNWPzaIlCeyHk4GBo7ZKbnmm4bNl\nmAZl4EiSHT+zMHBqZlKbb1Y5MvXEbtOC6+1I5ePJwJEkZWHg1My4XifvdwK2nO9d9fNHpc71HvYE\nbCqDgSNJyqLowPE672C6Dgfi9lWLku8JqR6KDhxJUjkMHEkCO35mYOBIkpePszBwClPX1jultuSC\n+m7TqpVc75LLPskMHElSFgaOaqlbiyhb0NXPKPeJx0sZDBxJUhYGjiQpCwNHkpSFgSNJYD+cDAwc\nSVIWBo4k2YotCwNHkpSFgSNJysLAkSRlYeDUzLiOEdV1hsdpY7ENc4bQQbdpqfskd7372ifd9m+f\nY/ONckZZ9c7AUVtOuKVWDg+jQRk4hanrH33JY1lN6syno6z3oF9mxnWfjDsDR5LAjp8ZGDiFqeu1\naOfDKU/J9R562T1jysLAkSRlYeColkq+JzSpnA9H3Rg4kqQsDBy1VfJ9GQ1fyfd8VA8GjiQpCwOn\nZib1WnOVnUwndpsWXG87HY8nA0eSwH44GRg4klTw2WBJDBxJUhYGjiQpCwNHkpSFgSNJysLAqZlx\n7VzX7wRsOd+76uePSp3rPewJ2FQGA0eSlEXRgWPnsMF0HfDQ7asWJXck7UmhZ7IlmVnVC0fEAuBS\nYD1wT0rpyubytwOHAXsBX0gpfaWqMoyjul5qKPWyE9R3m1at5HqXXPZJVuUZztnA8pTSOcCiiJjR\nXP5ESunPgfOAxRW+vyT1ZtzP3mqisjMcYD7wUPPnJ4C5wIaU0nURsReNs5/3t3tyRCwBlkxbPKuK\ngqp+ul2+8XJf/Yxyn3i8lKHKwHkQWAisAeYBGwEi4iXAu4B3p5QebPfklNIKYEXrsog4GHigovJK\nkipU5SW1q4FzI+JjwPXAsoiYBdwI/BZwSURcWOH7S5JqpLIznJTSWuC0Xax6cVXvKUmqr6KbRUuS\nymHgSJKyMHAkCez4mYGBI0n2w8nCwJEkZWHgSJKyMHAkSVkYOJKkLIoOnHEcMTZnner0XtNHmx7m\nhG2D1rPU4yx3vfvaJ932b58txkY5wZ96V3TgSJLKUXTgOALsYLpOwGZTUbUY+783++FUrujAUTlK\n/rAqueyDqLLefpmZTAaOJBmAWRg4amuU00Y7oVb9dLvx7gRs6sbAkSRlYeDUzKR+E6vymv7EbtOC\n6+09nvFk4EiSsjBwJElZGDiSpCwMHEkCO35mYOBIko0UsjBwJElZGDiSpCwMHElSFgaOJCkLA0eS\nlIWBUzPjOjNhvzN+5nzvqp8/KnWu97Bn/FQZDJzC1PUPsdQPZajvNq1ayfWupOwFb49SFB04DvA3\nmK5Durt91aLkwUBVD0UHjsaX01+XZ5T7ZODjxeMpCwNHkpSFgSNJysLAkSRlYeBIkrIwcCRJWRg4\nkqQsDBxJAjt+ZmDgSJL9cLIwcCRJWRg4kqQsDBxJUhYGjiQpCwNHkpTFzKpeOCIWAJcC64F7UkpX\nNpcfC5ze/LWrUkp39Pvahyw/hKdnPz20stbJV+/7KlNL27eYOelzJ3V8/vwPz2dqaoqZu83koldf\nxMI5C9v+7qo1q3Z6fGO6cafHdz56Z8f1rTY9tanj+lVrVnVcf9v/3sY96+6ppGwbt2zsXLZHOpft\n1vtv5YC9D2i7vq42bN4wcL33n73/9se3P3T7TuunP3f1T1d3XN9q/eb1Hdd/d813u5Zt/uz52x/f\ntfauju/9vUe/17ls+66HvXaDDu9ZtQPnHsjh8w8f2fvnMFXVJEwRsRS4JaX0nYi4CTghpbT1mZ+B\n3YHrUkon9vGaLwLu+8nrfsLTzxnPwJE0uS466iLOOvKsURejL8cee+whwMMppa4fypWd4QDzgYea\nPz8BzAU2AFMppa3A1oiY1e7JEbEEWDJt8V4AB339oOGXVpJGbOUNK1nJylEXo18PAIcAP+72i1UG\nzoPAQmANMA/Y2Fy+OSJm0jjD2dLuySmlFcCK1mURsQewGjge2FpBmUt3A42zR+2a26c9t01nbp/2\nbgAe7uUXqwycq4HLImITcD2wLCLOB5Y3180ELunnBVNKT0XEz1NK9w+9tGMgIn6ZUvrxqMtRV26f\n9tw2nbl92mtum57ucVQWOCmltcBpu1j1reY/SdIEsVm0JCkLA0eSlEWJgbOi+69MLLdNZ26f9tw2\nnbl92ut521TWD0eSpFYlnuFIkgpk4EiSsjBwJElZGDiSpCyqHGlgqNqNPq2GiDgI+DKNoX8eSSm9\na8RFqoWIOBT4XErpyIi4ADgYmAP8ZUpp/UgLVwPTts/VwAxgG3BlSuk/Rlu60YiIVwFvBzYBjwGb\n8bjZbhfb54U0sqTrcVPSGc7ZwPKU0jnAooiYMeoC1czRwKM0dvrtXX53IkTEfsCZwJPNcfiObh4/\nH+c3B4adOK3bp7nosObP/wfcPapy1cA+wJ+llP4CeDVwlMfNTqZvn56Pm5ICZ1ejT2uHVcAZND5A\nzjOQG8MrpZTeSeOPYR6wtrnqYWD/tk+cENO2D8AFzQ/WrwHvGF3JRiuldEtK6ecRcRHwaRrf4sHj\nBtjl9vmrXo+bkgLnmdGnYefRp9VwBLBHSmkbjVPdkvZtDo8Bz2v+vBB4ZIRlqZupiJgN/E7z8XoK\nutw+bBExOyL+GbgDuBaPm51M2z5foo/jpqSDaqfRp1NKvx51gWrmXuBDEbEW+EpK6VejLlCdpJR+\nHRHfjIiP0rgk8PZRl6lGtqWUnoyIl0TE5cDewIWjLtQILQcOpXHF4HTA42Zn07fPz3o9bhxpQJKU\nhZddJElZGDiSpCwMHElSFgaOJCkLA0eSlEVJzaKlWomIf6LRPPRw4C5gK/AnwNtSSksHfO2zgO+k\nlP5n2vIAfj+ltHyQ15dGwWbR0oAi4l+ARSmlzUN6vd2BT6SU/rjN+muAs4f1flIunuFIg5tq/iMi\nXgh8GLiARmflLcBzgZXAicC6lNKpEfFK4IM0Bsv8aErp2pbXW0SjFzfNAUdPpHH5e0lK6W7gW8Cb\naAwrIhXDezjS8D1z2eD5wOuBG4F9U0rHAvs3h5H5expBchRwVnNw0We8EvhB8+dFwB8CfwrMbi77\nAfCKKisgVcHAkQbX7rr0j1rGtruvuexnwB7AS4EvAt+gMVZX66CQ82iMSwVwPnAFcHnL+seavyMV\nxcCRBjf1LH73+zTu+xxD49LYoy2/s4HG3CsAp6aUTgHOpXGZDhojpT/+7IsrjYaBIw1uV2c427os\nfw/wtYhYBeyZUnqq5XfuoNHyDWBNRNxJYy6WjzWXHY5zHqlAtlKTaqZ5P+eTKaXFbdZ/ikYDAlup\nqSie4Ug10zzb+beIePn0dRHxUuB7ho1K5BmOJCkLz3AkSVkYOJKkLAwcSVIWBo4kKQsDR5KUhYEj\nScri/wEYC7LZYwNr3QAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZwAAAEoCAYAAABsGkdaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD59JREFUeJzt3X2MZXV5wPHv6LAgLmB2ld2A6AoNjwqEBSkUY7ArthiF\nrTWk2hjqgjAtDQ0yu7JoadaiERq220hpKETENtoXqI1gE5MWJZgYa1/AFAo80M7aum6Xgd3w0tZA\nB27/OGfsuN2XO+ycZ+69fD/JZM+ee+ec3y8L851z5sw5Y71eD0mSuvaKxR6AJOnlweBIkkoYHElS\nCYMjSSphcCRJJQyOJKnEeFcbjojDgauA0zLz5+es/wjwM8AS4EuZeU9XY5AkDY4uj3DGgWv3sP6C\nzLwUuBS4osP9S5IGSGfBycxdmfnsHl56sX39eZqjHEnSy0Bnp9TmGNvTyog4BHhuPhuKiHHg9cC2\nzJxZgLFJkoqMdXVrm4g4Azi//bgDWJaZF0fELwPvpDm6uTUzv72Xz58AJnZbvQQ4aWrtFDNL7Y0k\n7U9vU+e3L9vjQcUe3zhM91KLiFXAVoMjSf0ZpOB4WbQkqYTBkSSVMDiSpBIGR5JUwuBIkkoYHElS\nCYMjSSphcCRJJQyOJKmEwZEklTA4kqQSBkeSVMLgSJJKGBxJUgmDI0kqYXAkSSUMjiSphMGRJJUw\nOJKkEgZHklTC4EiSShgcSVIJgyNJKmFwJEklDI4kqYTBkSSVMDiSpBIGR5JUwuBIkkoYHElSCYMj\nSSphcCRJJQyOJKmEwZEklTA4kqQSBkeSVMLgSJJKGBxJUgmDI0kqYXAkSSUMjiSphMGRJJUwOJKk\nEuNdbDQiVgMbgGlgW2ZuaddPAkcARwF/kpn3dLF/SdLg6eoIZz0wmZmTwJqImA3bWZm5Cfh94NyO\n9i1JGkCdHOEAKzJzul3eBSyjOdq5OyJuoznCubqjfUuSBlBXRzjbI2Jlu7wc2Nkun5OZFwLnY3Ak\n6WWlqyOczcD1EbET+DpwEzAB/FNEXAO8BvjzfW0gIibaz5lrSQdjlSQVGOv1eos9hr5FxCpg69Ta\nKWaWziz2cCRp4PU2df41fqzfN3pZtCSphMGRJJUwOJKkEgZHklTC4EiSShgcSVIJgyNJKmFwJEkl\nDI4kqYTBkSSVMDiSpBIGR5JUwuBIkkoYHElSCYMjSSphcCRJJQyOJKmEwZEklTA4kqQSBkeSVMLg\nSJJKGBxJUgmDI0kqYXAkSSUMjiSphMGRJJUwOJKkEgZHklTC4EiSShgcSVIJgyNJKmFwJEklDI4k\nqYTBkSSVMDiSpBIGR5JUwuBIkkoYHElSCYMjSSphcCRJJQyOJKmEwZEklTA4kqQS411tOCJWAxuA\naWBbZm5p178PeDdwEHBrZt7f1RgkSYOjyyOc9cBkZk4CayJiNm4TNBF6Dni8w/1LkgZIl8FZkZnT\n7fIuYFm7fAJwHbAFuLrD/UuSBkiXwdkeESvb5eXAznb5iczsAc8AB3e4f0nSAOnsZzjAZuD6iNgJ\nfB24ieZ02o0RcVv7ns/t7ZMjYqJ9/1xLuhioJKl7Y71eb7HH0LeIWAVsnVo7xczSmcUejiQNvN6m\nzr/Gj/X7Ri+LliSVMDiSpBIGR5JUwuBIkkoYHElSCYMjSSphcCRJJQyOJKmEwZEkldjvrW0iYiPw\nVeBM4BLg3sz8ZNcDkySNln6OcN6SmQn8CvAO4OhuhyRJGkX9BOfVEfFu4KH2Ls+HdzwmSdII6ic4\ntwDnAZ+OiDOBu7odkiRpFPXzeIJzMvPydvlx4DsdjkeSNKL6Cc6bIuJ64AezKzLzhu6GJEkaRf0E\nx1NokqQD1s/PcO4CVgDHAF8D/rbTEUmSRlI/wbkV+FfgBOBF4PpORyRJGkn9BOfpzPwK8KPMfAp4\nsuMxSZJGUD/BOTgirgRWRcRvAId0PCZJ0gjqJzjrgP8AvgHsav8uSdK89HOV2nXtn2PAcuDUiNgF\n3JaZ2zsbmSRppPR1axvg+zRXqE0BS4FHaS4mkCSpL/0E5xWZeUNmfjMzbwReyMw7gOmOxyZJGiH9\nnFJbGRGbae40cBRwXES8HXhVpyOTJI2UfoLzi8A7gZXAI8Bv0fw850MdjkuSNGL6Cc7t7Z9jQA+Y\noLla7QbggY7GJUkaMf0EZwr4FvAg8Faao53bae448J7uhiZJGiX9BOd1mTl7A8+piPiFzPz7iNjZ\n5cAkSaOln+D0IuIv+L+LBsYi4mzgqU5HJkkaKfsNTmaui4jjaC4aeDIzs33pG52OTJI0Uvb6ezgR\n8cX2z/uBO4AbgT+LiPtqhiZJGiV7PcLJzHXt4i9l5mM1w5Ekjap+7jSwqfNRSJJG3j5/hhMRK4GT\nImIHsJ32d3Ey89SKwUmSRsf+Lhq4JTNPLhmJJGmk7S844xFxGM2RzY9l5jPdDUmSNIr2F5zTgTv5\nyeD0gHd1NiJJ0kjaX3C+k5nnlYxEkjTS9neV2r+VjEKSNPL2GZzMvKxqIJKk0dbP7+FIknTADI4k\nqYTBkSSV6OfxBPMWEauBDcA0sC0zt8x57aeAbwOnZOb2LvYvSRo8XR3hrAcmM3MSWBMR4wARcQiw\nEbi7o/1KkgZUV8FZkZnT7fIuYFm7/NvAp4HnO9qvJGlAdXJKDdgeESszcwewHNgZEcfQPMTtQmA1\ncDFwzd42EBETwMRuq5d0NF5JUsfGer3egm80Ik6kOXW2E3gMODkzJ+a8/gXg6vn+DCciVgFbp9ZO\nMbN0ZgFHLEmjqbdp4b/G72Zs/29pdHKEk5kPAhfs4/WLutivJGlweVm0JKmEwZEklTA4kqQSBkeS\nVMLgSJJKGBxJUgmDI0kqYXAkSSUMjiSphMGRJJUwOJKkEgZHklTC4EiSShgcSVIJgyNJKmFwJEkl\nDI4kqYTBkSSVMDiSpBIGR5JUwuBIkkoYHElSCYMjSSphcCRJJQyOJKmEwZEklTA4kqQSBkeSVMLg\nSJJKGBxJUgmDI0kqYXAkSSUMjiSphMGRJJUwOJKkEgZHklTC4EiSShgcSVIJgyNJKmFwJEklDI4k\nqYTBkSSVMDiSpBLjXWw0IlYDG4BpYFtmbmnXXw68GTgc+KPM/Osu9i9JGjxdHeGsByYzcxJYExGz\nYfteZl4KfAp4b0f7liQNoK6CsyIzp9vlXcAygMy8NyJeC1wJbO5o35KkAdTJKTVge0SszMwdwHJg\nJ/z4VNulwPrMfGZfG4iICWBit9VLuhisJKl7Y71eb8E3GhEnAhtpQvMYcHJmTkTEA8DfAC8AD2fm\nF+a53VXA1qm1U8wsnVngUUvS6OltWviv8bsZ6/eNnRzhZOaDwAV7WH9SF/uTJA0+L4uWJJUwOJKk\nEgZHklTC4EiSShgcSVIJgyNJKmFwJEklDI4kqYTBkSSVMDiSpBIGR5JUwuBIkkoYHElSCYMjSSph\ncCRJJQyOJKmEwZEklTA4kqQSBkeSVMLgSJJKGBxJUgmDI0kqYXAkSSUMjiSphMGRJJUwOJKkEgZH\nklTC4EiSShgcSVIJgyNJKmFwJEklDI4kqYTBkSSVMDiSpBIGR5JUwuBIkkoYHElSCYMjSSphcCRJ\nJQyOJKmEwZEklTA4kqQSBkeSVGK8qw1HxGpgAzANbMvMLe36jcBKYDlwXWY+1NUYJEmDo8sjnPXA\nZGZOAmsiYjwiDgHenplXAJ8EJjvcvyRpgHR2hAOsyMzpdnkXsAxYAjzRrvshcNQ8t/lKgPH/7nLY\nkjQ6Ht36KIcedGhn2z/77LNX0ZzFmtnfe7v8yr09IlZm5g6a02c72/29rn19FfCDvX1yREwAE7ut\nfjXAG+5+w4IPVpJG0Xl3ndf1LrYCbwK+v783jvV6vU5GEBEnAhtpQvMYcHJmTkTEFcAbaY54PpOZ\nj85jmwcD3wPOBV5Y+FGXuwtYu9iDWCDOZTA5l8E0anM5tZ8jHHq93lB9HH/88f+w2GNwLs5lWD6c\ny2B+vFzn4mXRkqQSBkeSVMLgSJJKDGNwblnsASwg5zKYnMtgci6Dqe+5dHaVmiRJcw3jEY4kaQgZ\nHElSCYMjSSphcCRJJYbmLph7e9zBMImIw4GrgLdl5jkR8bvAizSPa/h4e9+5oRARbwE2ATuAHs08\nhnUup9Dc3Xwn8DzNN2JDOZdZEfEV4D6aW0gN5Vwi4iPAh4BHaG4A/BqGdy7LgM8AzwKPA2+l+e9t\nBXBpZv5oEYc3LxHxYeC09q/vA75Fn3MZpiOc//e4g8Ue0EswDlwLjEXEccChmflx4Gbg4kUd2fz1\ngMsy82PAiQz3XJ4Dfj0zLwdOYbjnQkRMAt9t/zrUcwH+k+a+iTsY7rn8KvAkMENz0+LHMnMjcDfw\ngcUc2Hxl5pfbR8z8HfAJ5jGXYQrOnh53MFQyc1dmPguM0XyX9sP2pZfyqIZFlZmPZOaTEfExmu9w\nhnkuDwHHRsRfAvcwxHOJiJ+l+SL9XZr/zoZ2LsCdwCWZuQH4ILC9XT+MczkWuDczfxP4U37y3+Xo\nRRvVS9Q+2+xc4BDmMZdhCs72iFjZLs8+7mCYbQeOaZffyD4e1TCIImJJRNxE813OlxjuuZwGZGZ+\nADidIZ4L8H6ab2bWAWuAd7Trh3EuARzULr9A80gTGM65zD399zjDPRdojmTupIlM3/+/DM0vfu7+\nuIPM/INFHtK8RcQZwPntxx00p6VeCRwJrM/MJ/bx6QMlIq6i+WI2+4jwsfZjGOfyLuAimlMeh9H8\nnPAghnAusyLiLJp/n8MY0rlExE/TnLL5F5rTnuMM71yOBm6geWbMEzTBeQZ4Lc3PPZ5btMG9BBFx\nA/A5YAq4iT7nMjTBkSQNt2E6pSZJGmIGR5JUwuBIkkoYHElSCYMjSSphcCRJJQyOtIAi4osLsI0T\nIuIP97D+9IjYfKDblxaLv4cjvQQRcSPNb1afSXO3hRma27A8vgDb/hrw0Tm3cpr72q3A5sx8+ED3\nI1UbxhtgSosuMy8DiIhvAh9s75FHRNyfmadExIPA7cBZNPdnexVwBvAe4G00d9p+qtlUXjO73Yh4\nPfBCZk5HxM8BE8B/AQ9n5u8AXwYuBK6smam0cDylJh2Y2Vv6zJo9ZXBYG5KbgSMz82qae2gF8Fng\nosz8MHBaRBw55/NPBe5vl88Fbs7MdcBX23X30QRLGjoGR+rG7M1ln5+z/D809wI7Crg2Im4DDqa5\n2easI4Cn2+XPAu9vj6LObNc9DRze4bilzhgcqRtj+3jt32me7XQh8GvAA3Nee5omOgDHtqfuzgYu\nadcdQXOjRGno+DMc6cDs7aqbPa3vtR+fAv44InYBz2fmxJz33A98tF1+c0RcSROYe9t1pwD/eKCD\nlhaDV6lJAyYi/gpYl5lP7uG1zwO/l5n/XD8y6cB4Sk0aPJ8Artl9ZfuguKeNjYaVRziSpBIe4UiS\nShgcSVIJgyNJKmFwJEklDI4kqYTBkSSV+F+CEmdKszEy1AAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10db6ded0>"
+       "<matplotlib.figure.Figure at 0x53409d0>"
       ]
      },
      "metadata": {},
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
